--- a/pom.xml
+++ b/pom.xml
@@ -5,11 +5,11 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.owen</groupId>
-    <artifactId>getsetter</artifactId>
+    <artifactId>batisx</artifactId>
     <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
     <modules>
-        <module>getsetter-war</module>
+        <module>batisx-war</module>
     </modules>
 
 
